--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feeding Bangladesh</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,900&family=Poppins&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,8 +18,23 @@
         <div class="banner-text">
             <h1>Let's Help Those Who Are More In Need</h1>
             <p>Feeding Bangladesh is an organization has so far fed more than 43 million people through their set up
-                food pantries and shelters</p>
-            <a href="google.com">Donate Now</a>
+                food pantries and shelters</p><br>
+            <br><a target="_blank" class="donate-btn" href="https://google.com">Donate Now</a>
+        </div>
+    </section>
+    <!-- donate grid section -->
+    <section>
+        <div class="donate-text">
+            <h2>Donate Today</h2>
+            <p>Please choose the option you like to donate!</p>
+        </div>
+        <!-- grid box -->
+        <div class="container">
+            <div class="grid-item">100tk</div>
+            <div class="grid-item selected">200tk</div>
+            <div class="grid-item">500tk</div>
+            <div class="grid-item">1000tk</div>
+            <div class="grid-item">5000tk</div>
         </div>
     </section>
 </body>
