Donation plan added

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
             <br><a target="_blank" class="donate-btn" href="https://google.com">Donate Now</a>
         </div>
     </section>
+
     <!-- donate grid section -->
     <section>
         <div class="donate-text">
             <h2>Donate Today</h2>
             <p>Please choose the option you like to donate!</p>
         </div>
+
         <!-- grid box -->
         <div class="container">
             <div class="grid-item">100tk</div>
@@ -36,6 +38,41 @@
             <div class="grid-item">1000tk</div>
             <div class="grid-item">5000tk</div>
         </div>
+        <div class="form-input">
+            <form action="">
+                <p><input type="text" id="Taka" name="Taka" placeholder="Other Amount Taka."></p>
+                <input class="donate-btn" type="submit" value="Donate Now">
+            </form>
+        </div>
+    </section>
+
+    <!-- Donation plan section -->
+    <section>
+        <div class="donate-text">
+            <h2>Our Donate Plan</h2>
+            <p>Their main value working together to end hunger is clearly portrayed through their business name. <br>The
+                name is simple and gets straight to the point whilst informing audiences of what they do.</p>
+        </div>
+        <section class="donation-plan">
+            <div id="food" class="donation-ways">
+                <img src="/icons/food.png" alt="">
+                <h2>Food for a family</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div id="shelter" class="donation-ways">
+                <img src="/icons/shelter.png" alt="">
+                <h2>Shelter for a family</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div id="education" class="donation-ways">
+                <img src="/icons/Frame-1.png" alt="">
+                <h2>Educationfor a family</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+        </section>
     </section>
 </body>
 
