end till bonus work

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
     <!-- donate grid section -->
-    <section>
+    <section class="gird-section">
         <div class="donate-text">
             <h2>Donate Today</h2>
             <p>Please choose the option you like to donate!</p>
@@ -38,9 +38,9 @@
             <div class="grid-item">1000tk</div>
             <div class="grid-item">5000tk</div>
         </div>
-        <div class="form-input">
-            <form action="">
-                <p><input type="text" id="Taka" name="Taka" placeholder="Other Amount Taka."></p>
+        <div>
+            <form class="form-input" action="">
+                <p><input type="text" placeholder="Other Amount (Taka)"></p><br>
                 <input class="donate-btn" type="submit" value="Donate Now">
             </form>
         </div>
@@ -73,7 +73,21 @@
                     duis enim velit mollit.</p>
             </div>
         </section>
+        <section>
+            <div class="donate-text">
+                <h2>Get My Updates</h2>
+                <p>Get our latest News and updates abouts new campign.<br>
+                    Enter your email hit the Subscribe Button</p>
+            </div>
+            <div class="subscription-option">
+
+            </div>
+        </section>
     </section>
 </body>
+<footer>
+    <h1>Be humble</h1>
+    <p>Help each other to make the world a better place</p>
+</footer>
 
 </html>
