Subcribtion button added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Feeding Bangladesh</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,900&family=Poppins&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two:ital,wght@1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -80,7 +80,9 @@
                     Enter your email hit the Subscribe Button</p>
             </div>
             <div class="subscription-option">
-
+                <input class="email-input" type="text" placeholder="Email"
+                    style="text-align: initial; background-color: #D9D9D9;">
+                <input class="donate-btn" type="submit" value="Subscribe">
             </div>
         </section>
     </section>
