font family changed

--- a/index.html
+++ b/index.html
@@ -50,34 +50,34 @@
     <section>
         <div class="donate-text">
             <h2>Our Donate Plan</h2>
-            <p>Their main value working together to end hunger is clearly portrayed through their business name. <br>The
-                name is simple and gets straight to the point whilst informing audiences of what they do.</p>
+            <p>The goal is to reach out every person every family Who needed for food shelter and Education<br>
+                Working together to end hunger is clearly portrayed through our organization </p>
         </div>
         <section class="donation-plan">
             <div id="food" class="donation-ways">
                 <img src="/icons/food.png" alt="">
                 <h2>Food for a family</h2>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <p>The project will provide highly nutritious meals which will include delicacies that poor family
+                    canenjoy.</p>
             </div>
             <div id="shelter" class="donation-ways">
                 <img src="/icons/shelter.png" alt="">
                 <h2>Shelter for a family</h2>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <p>Many people don’t have shelter in Bangladesh,Each year people lose their life due to the
+                    extreme weather.</p>
             </div>
             <div id="education" class="donation-ways">
                 <img src="/icons/Frame-1.png" alt="">
-                <h2>Educationfor a family</h2>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit.</p>
+                <h2>Education for a family</h2>
+                <p>Our main focus on education for the underprivileged street children for whom education is a dream to
+                    achieve.</p>
             </div>
         </section>
         <section>
             <div class="donate-text">
                 <h2>Get My Updates</h2>
                 <p>Get our latest News and updates abouts new campign.<br>
-                    Enter your email hit the Subscribe Button</p>
+                    Enter your email and hit the Subscribe Button</p>
             </div>
             <div class="subscription-option">
                 <input class="email-input" type="text" placeholder="Email"
