--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div>
             <form class="form-input" action="">
-                <p><input type="text" placeholder="Other Amount (Taka)"></p><br>
+                <p><input type="text" placeholder="Other Amount (Taka)" style="font-size: 20px;"></p><br>
                 <input class="donate-btn" type="submit" value="Donate Now">
             </form>
         </div>
@@ -73,13 +73,48 @@
                     achieve.</p>
             </div>
         </section>
+        <!-- Latest news section -->
+        <section>
+            <div class="donate-text">
+                <h2>Latest Events</h2>
+                <p>Here's the latest events has been organized</p>
+            </div>
+            <div class="container-events">
+                <div>
+                    <img src="/images/donation2.jpg" alt="" style="width: 250px; height: 150px;">
+                    <h2>Food and clothing distributed to peoples</h2>
+                    <p>june 15, 2022</p>
+                    <p>About 10,000 people recived the relief and returned happily</p>
+                    <a class="read-more" target="_blank" href="https://google.com">Read more</a>
+                </div>
+                <div>
+                    <img src="/images/donation5.jpg" alt="" style="width: 250px; height: 150px;">
+                    <h2>People who lost there<br> home</h2>
+                    <p>june 18, 2022</p>
+                    <p>Relief was distributed among a hundred flood affected people</p>
+                    <a class="read-more" target="_blank" href="https://google.com">Read more</a>
+                </div>
+                <div>
+                    <img src="/images/donation10.jpg" alt="" style="width: 250px; height: 150px;">
+                    <h2>Donation given to the old farmers</h2>
+                    <p>june 22, 2022</p>
+                    <p>Farmers who lost there field because of flood recived relief</p>
+                    <a class="read-more" target="_blank" href="https://google.com">Read more</a>
+                </div>
+
+            </div>
+        </section>
+
+
+
+        <!-- Subscribe section -->
         <section>
             <div class="donate-text">
                 <h2>Get My Updates</h2>
                 <p>Get our latest News and updates abouts new campign.<br>
                     Enter your email and hit the Subscribe Button</p>
             </div>
-            <div class="subscription-option">
+            <div class="subscription-option" action="">
                 <input class="email-input" type="text" placeholder="Email"
                     style="text-align: initial; background-color: #D9D9D9;">
                 <input class="donate-btn" type="submit" value="Subscribe">
