--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="/icons/food.png" alt="">
                 <h2>Food for a family</h2>
                 <p>The project will provide highly nutritious meals which will include delicacies that poor family
-                    canenjoy.</p>
+                    can enjoy.</p>
             </div>
             <div id="shelter" class="donation-ways">
                 <img src="/icons/shelter.png" alt="">
@@ -81,23 +81,23 @@
             </div>
             <div class="container-events">
                 <div>
-                    <img src="/images/donation2.jpg" alt="" style="width: 250px; height: 150px;">
+                    <img src="/images/donation2.jpg" alt="" style="width: 280px; height: 150px;">
                     <h2>Food and clothing distributed to peoples</h2>
-                    <p>june 15, 2022</p>
+                    <p>June 15, 2022</p>
                     <p>About 10,000 people recived the relief and returned happily</p>
                     <a class="read-more" target="_blank" href="https://google.com">Read more</a>
                 </div>
                 <div>
-                    <img src="/images/donation5.jpg" alt="" style="width: 250px; height: 150px;">
-                    <h2>People who lost there<br> home</h2>
-                    <p>june 18, 2022</p>
+                    <img src="/images/donation5.jpg" alt="" style="width: 290px; height: 150px;">
+                    <h2>People who lost there home and shelter</h2>
+                    <p>June 18, 2022</p>
                     <p>Relief was distributed among a hundred flood affected people</p>
                     <a class="read-more" target="_blank" href="https://google.com">Read more</a>
                 </div>
                 <div>
-                    <img src="/images/donation10.jpg" alt="" style="width: 250px; height: 150px;">
+                    <img src="/images/donation10.jpg" alt="" style="width: 280px; height: 150px;">
                     <h2>Donation given to the old farmers</h2>
-                    <p>june 22, 2022</p>
+                    <p>June 22, 2022</p>
                     <p>Farmers who lost there field because of flood recived relief</p>
                     <a class="read-more" target="_blank" href="https://google.com">Read more</a>
                 </div>
