Image not showing trying to fix

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
         </div>
         <section class="donation-plan">
             <div id="food" class="donation-ways">
-                <img src="/icons/food.png" alt="">
+                <img src="./icons/food.png" alt="">
                 <h2>Food for a family</h2>
                 <p>The project will provide highly nutritious meals which will include delicacies that poor family
                     can enjoy.</p>
             </div>
             <div id="shelter" class="donation-ways">
-                <img src="/icons/shelter.png" alt="">
+                <img src="./icons/shelter.png" alt="">
                 <h2>Shelter for a family</h2>
                 <p>Many people don’t have shelter in Bangladesh,Each year people lose their life due to the
                     extreme weather.</p>
             </div>
             <div id="education" class="donation-ways">
-                <img src="/icons/Frame-1.png" alt="">
+                <img src="./icons/Frame-1.png" alt="">
                 <h2>Education for a family</h2>
                 <p>Our main focus on education for the underprivileged street children for whom education is a dream to
                     achieve.</p>
@@ -81,21 +81,21 @@
             </div>
             <div class="container-events">
                 <div>
-                    <img src="/images/donation2.jpg" alt="" style="width: 280px; height: 150px;">
+                    <img src="./images/donation2.jpg" alt="" style="width: 280px; height: 150px;">
                     <h2>Food and clothing distributed to peoples</h2>
                     <p>June 15, 2022</p>
                     <p>About 10,000 people recived the relief and returned happily</p>
                     <a class="read-more" target="_blank" href="https://google.com">Read more</a>
                 </div>
                 <div>
-                    <img src="/images/donation5.jpg" alt="" style="width: 290px; height: 150px;">
+                    <img src="./images/donation5.jpg" alt="" style="width: 290px; height: 150px;">
                     <h2>People who lost there home and shelter</h2>
                     <p>June 18, 2022</p>
                     <p>Relief was distributed among a hundred flood affected people</p>
                     <a class="read-more" target="_blank" href="https://google.com">Read more</a>
                 </div>
                 <div>
-                    <img src="/images/donation10.jpg" alt="" style="width: 280px; height: 150px;">
+                    <img src="./images/donation10.jpg" alt="" style="width: 280px; height: 150px;">
                     <h2>Donation given to the old farmers</h2>
                     <p>June 22, 2022</p>
                     <p>Farmers who lost there field because of flood recived relief</p>
