--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
             <div class="container-events">
                 <div>
                     <img src="./images/donation2.jpg" alt="" style="width: 280px; height: 150px;">
-                    <h2>Food and clothing distributed to peoples</h2>
+                    <h2>Food and clothing <br>distributed to peoples</h2>
                     <p>June 15, 2022</p>
                     <p>About 10,000 people recived the relief and returned happily</p>
                     <a class="read-more" target="_blank" href="https://google.com">Read more</a>
                 </div>
                 <div>
                     <img src="./images/donation5.jpg" alt="" style="width: 290px; height: 150px;">
-                    <h2>People who lost there home and shelter</h2>
+                    <h2>People who lost there <br> home and shelter</h2>
                     <p>June 18, 2022</p>
                     <p>Relief was distributed among a hundred flood affected people</p>
                     <a class="read-more" target="_blank" href="https://google.com">Read more</a>
